--- a/gui/MagazynForm.resx
+++ b/gui/MagazynForm.resx
@@ -117,4 +117,153 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="zamow.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGwAAAAfCAYAAAAC0CiiAAAABGdBTUEAALGPC/xhBQAABLRJREFUaEPt
+        mmtsVEUUx6+JmmhM1A8oAloSFRRfNZH4gWg0ajTxkZr4iPDBIJpoxCfGBGKiiZgYP4AfjNJtgZaWh0gR
+        WmgVpLRYaK1BsFD27qv76L7a7b7fd++9xzkT57pLJ5qg7b3q3OSXzJwzMx/mP3PmzO5IAMAlpZaussVH
+        3nwh0H1gibM1Ose+CQQzw3zZVrrb1e5bHuju2po4+2q0kp/L0wSZZshqyhUfRI9vuEFuzvMGF8w8C+Sm
+        4sbYyXVlXb30fH1qKiPFWP1S9w43bxDB7PPg2DenYpXCnGqNjIK7nFy02NkS43UUmEe9q93vKadurhEM
+        w+C97p0OXgeB+Tzm3TtY0bWLDcHWRQc+5zUUWIeNU7+spYIFlEzdtfZGlddIYB1ucbZMYhIifTF1+j1e
+        A4H12Jd2PyfhPYvnFFiPdyP9jRJe2HhOgfV41Lt3SMJLGs/5X6c1OQpdGQ/XZ1Wul5sKEs8xm7w4/h2U
+        NLUGVdfgeD7Ebf9P0ODvhB+yfvxFgeu3MqYLdj51cjOMlVNAzlau//+O5QRrSYxCW/KcUV9OhBspxoBc
+        PyhrIv2Gz1/OwCvBw+AuJyGuFqE3F4CHvR3wYy4I0UoOPET4Z/0HjPa3OVvh27QLxn8fyxYfwTBDfUdz
+        47A61Gu0JRkZnCpMGPWnya60l+JG3SwsJdjzgYPgK6dhoWOzYVvq3gF3utpoeZlnFxS1iuHHSe/JeGlo
+        m2e3wTEiVFYt429w1L8y+D14yXhsLAyzn04OwzWkjH06iHibE2ep78OJE7AzJdPyfNlGRcWdfodrG7Vt
+        iJ2Er+K/GmOZhWUEu8mxBYJKFp707ef6GSgSCsfKz/i7DN/HE0PQTQRkdRRF13WYa28Ekg1TMbHM/PXE
+        hgsABXxgbDcVCe0rxnvoOLjb348co7bhQoQuKNbXLCwj2J6UE76Mn55mxzB1guyMoXwEBvNhmpTc5/ma
+        +lCw+8lEs7a4S9qTdqOO4uCHwj3h20dDJPMxNCLorc4WWp6sFOAe93bYTsZ4K3yUhmMMswvJuZrVFCN8
+        moklBHuJhC65lJiWteFuw12HZw+zTZFJrRaMlZE/EwxDK076dSR0Mv9dJNTiAsAdhnVcNCgUnn+LiYjY
+        L0HOxlXBQ9BHzjjWz0xMF2wJESNaycND3j3TfExIPFOw/na4jwpwIYJhHXfoZ7GfaRnPvN0pB72PsfZv
+        hHtpojGQ++NK0Zn2UNtHE4OGzUxMF2w9OXfww7tXNWElRycVszoUFDNCDJm40i9UMFwcKADuIExGMOHA
+        awRrjwkGfmujA4bttdARasMzjtnMxDJnmOCvIQsqKIkHNv8envLt75NIqtrDcwqsxzvhPptEYv4qnlNg
+        PQ5lfY9LeU25XDxpsz43OrYkC1rlMvqm45PJn9bzGgmsQ1vy3MuoFRUM3wos8+wa5TUUmE+Dv7NX1/WL
+        DMEQfPsm/n22HuSeeSaplq5mOhmCIRElN+8Rb8cwr6Ng9sE0PqRkF1RrVCMYgg8W8SVVndyc4w0imHlu
+        d20LNSXOrGZhsJqaSjVptXTlwcxYw+uhI62o9CLH1ine4IK/D24OfGCzJtK/Cedc0dVLeJoAgPQbbhWz
+        r8BjUE0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="wydaj.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGUAAAAfCAYAAAD+xQNoAAAABGdBTUEAALGPC/xhBQAABLFJREFUaEPt
+        mmtsVEUUx6+JmGhI0A8oAgLRUHyS+gExoh+MLxLUkJho5JOKH1QIQSAaK/GDwQ8atZoY05e0hUoxQnmX
+        FG1tpUChFEpL2Xf3wT5uu9vd7vt1d49zRu713mUwpWnvrWaa/JqZc2Znk/nfc+bM3hEAgMm4lLmzZmxg
+        05ue1qMPWxvFuaYq4EyeBeaazOO2Jtc6T+uR+vDl98R8ch5r3ZHrDPFCbvZ28dS3i8x1SdbknKlhobk2
+        XRnsq8gWpdtKNdB0BtLB8hX2PXbWJJzp4dnhXy8G86m5ah2Uhj0bKVtmbQiyPsiZXsptTW5HdnypRhRM
+        WSvtzRbWBzj6sNrZciZfLNyqiFIhdn/HGsjRl8rQhU+oKJ5cbPE9pmqJNYijLw9aG0Zx4xd+CPVvYw3g
+        GMPBqP11Ac8hLCfHGLYEuqoFPNCwnBxjeMnZ0iPgIYbl/L/wvHM/2DIRpq+U19xH8OTN9OnFfebalMBy
+        6MnxmBO2i6c0tjNJP7TFXRrbR4E/oT3u0dgmws2IcjkdgicdzUyfnhguyseBk/Bb3K30yyz14M8lICJl
+        YIm5TrEfjQ1fJ95EuBlRZgqGi/KEfQ+Qwyvca/o7bWzwtUNL1EaFesfbRm13E1CkVY690JcagfXeE5o5
+        elOiYsP5Tia84M3FoT89SkVXi7LO0woD6SCQowBla6BL8WH/GccvSt8oDBcFcWWj8LLrIG0fjjpgk/8P
+        rEJg37iV2l4kTztGD7bR15H4J42hCGEprewFuOCfj/TQ9hLLT3A66dOIsoKMX27bTdsocrqQp+Owz0VR
+        0RAegi9He2E+iZYoiYiHrA3wiLWRRgdG0A6yyD9HTHTsIpLSUIRyWxPtfx08D3XhQdrGBY9LWZhnqlbm
+        fptE27+lLxQCxZHbXJRrvHW1jW7uWP2cTQYUO6YltHUlrmpSVi0R4atgL21jlD3n3EfbGG2O7LgyDlnt
+        bNGIstHXQaOnh3wPfmemIClCcFFU3G/ZCTHyhFcG+5TUg2D7+9AF+vQvJQWAbMeFGyaLv8Z1AIZIxSTb
+        MZVhpOEeJNvI4VgR5RXXIbrXYBTK/lA+xUW5EedSARDzCXjqWipBsDwV80m6uavHIvikd5II+rSkIhsk
+        IlWI3bSNqe53UjDIomDhYM6Elf1ns78T8I+LcgNwTylNPQgu6Ddk3yi1f0CqtFxRwh/xNPaV9mboTvho
+        YYACvE/GyaLgnnWAVHYotDsbgx/H+qmwXJQpAktZPLuwfJMFRXnaYFEes+3yCv/FSxHLSHRgVMll9FSA
+        B1Xc19T7jRG86jrUKbzhOXac5ZypYMUUIKnps5HTTP9k2B25QlNa1dglpl9PPvR31ghNEdN6lpNjDCfi
+        rjVCspC7g18nmhk8YNkZSRXyt9N39F+Mnt3BGsTRF5JG36Xv6PEfvhde5dg7xBrI0Ye17sMdxWLxFkUU
+        BO8d8beQxkDORoMRKXOXrIUiCkKqmvkvOPefY32QMz1gCezLxReqddCIguCFMLzhsthcl2BNwpkaHrXt
+        8tWGBzfKKUuNpqMmKmXmHIsNr93ga29ENcss9SHW5JyJgQ85XorYGuiqwnXNFaVZrHUHAOEvb2qLOtUs
+        d9UAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="przyjmij.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAOoAAAAfCAYAAADpy1HkAAAABGdBTUEAALGPC/xhBQAACAxJREFUeF7t
+        nGlslEUYx9dETTQm6gcEEQElHAIqGBEjYmLUiKJIokLAT4oaD0JUjAY0nhiNF8QYhbbclUuucpSIgi33
+        fbRgj93tHrTdbbfttt2ju9vdHec/6bzOvs4edLfdLRmSX/LOPDPPO9f/nWemZA2EECmt4cBNec1l82bZ
+        i3eNrl7t7FexlCgUisxxW2VeYLyx0DrbXrxzZcuFN5ydvgEyLYL/ZXgioRs+dh7+cXBlgU/mXKFQ9AyD
+        KvM7FrtOLwxGw9fqdRmTKOtwjZtgWmeSOVEoFL3DozW/n3V1+vuJ2tQeTEH3iJHVq1yyigqFoncZZyy0
+        mYOtw2OEinB3oml9layCQqHIDlMsW492RiNXa0Jd6Dy0RFZQoVBkl8VNZxYwodpD7UP6VywLywopFIrs
+        Mqp6VSMulww/N517X1ZAoVDkBtvbTDMM+DupzKhQKHKD9xylywz4g6vMqFAocoMnLVuPGfBHVpnxSuN5
+        2078TxCpLRli3XT89ASPW7YQY8AttaVCrvTHHmonk80bpbaeJtfmVM/tlfl+g8zQm+zz2IkvEiLt4SBx
+        dnpJUZuJ3G/6TVo2HS50NJEHzeultmSIddPx0xOkK9TL6c/XjSfIc7YiqS1dsinUXJtTGTkh1Dfr9rHn
+        O6tWkPyWcjZw+nIKOekKNVVo5EVO+p1XpFD7AjklVEC3eRKJRsld1atY2hZsx3+pIuc7GomX7rzTrNtJ
+        ORUyB3mfNRwlp/0NZE7tXs0PwMLieeJCgM/Xav8kpqCbNIc7yH6vnS34g95atqubg63kRdsuzY9YN96C
+        gs/Xqc+yDhfzUeq9FBMZpNoPlB1F+76jzUyswTYmwrl1+zU/D5jWsXbWhjzkHPX1oeNgjFDT6duY6tVk
+        W5uRXKJ5yM9rLmPzAdtq90XSEekkNbQ+2kvPTZoPgHfE608qZcR2JOr/mOo1LOpydvqIOxwg39BdPlkd
+        jMlM+25SEWhm9c7StYK54Hbx3bPtxWwOkQfmO0q1ctkk54Q6jO6qEOqQygKWxmAd9znIQ+YN5JauMhwM
+        dh1dsBD1vPq/2aLkNizoFrpQ+dlDnAw872m3sF1iYEUeOUAXsYeG3nzyXq79g1johHNf+rr8WQT5ez1W
+        Mrir3d+5TpEzdEGI9lT6gXQJFfmihmPseaxxDbM9ZtnM0lhEX3TZhlYtJ0d8dTFCTadvh6kvLHy0D/W3
+        UNEub7mglYW4UtlR9f2RoS8jtiNR/4/66slPTWfZvKKN+LgkqwPfWBt30PFC+nP6cYAfPHM7f/cEum7u
+        Ma5lz5PoXOHjhHHmZbNFzgj1VrqoJprWs6/l5tZqzY5B1O+UABOFL+RLl/awNAQCYY4zFrL091QoBTSM
+        5uXFycDzC7admu1LOsHFdHHzNBZAlH4sBlQs08qLdfmziN4nRIKz9/iu9sCeSj/upYsE53VRzOgHhI9F
+        BNHxdgEITy/U7vQN7dT7xlhiofK2pCJUfX9kyMrwdiTqP2sjHVOMLbeBRHXwDN8z7P9FEfiIN3X6tTR/
+        N0+LwAbBymy9SU4IFYOPkAQ70KLG41q4BTBQj9RsiqkDfm0+T9a6/4nJw/n2W9dJ9owQiH9RgTgZep+f
+        Nhwhhe4KLY3Fin9Y1Ly8WFc2qcjnuxYHIRcPEfXv5Oj78bR1GwlFwyzEFFnsOk2eoeEyQlex/hTqXy/U
+        7vRN5huIx5BUhCqbFz2yMrwdifo/ldpkbUxUh/sWx+Q+UyFpo2EzT/N34xkhM6KUYzT6wa4biISl893b
+        5Fzoq0ccRM502w42YUO7wkwOymGCMKEX6aISbaIfvc9MCRXnIJ7GruGnuxHf4WX1ZP3AroFFJO4OHOwE
+        etsseqbSC7U7fWO7Nf1gIrLhZbFTYaHy9yHsTiTUePMiEq8Mb0ei/uPMj11fbCNIVAfoxySeUJ+1FrGz
+        Pw+nAXZesW626HNCxc0wdsunLNtiynHwJcR55SPn4Zh80Y/eZ6aEir7wMypC71N+Z4w91X7gImpJ0xkm
+        dqSxQO+m5y48Y1db6DzEnvGuvzy2jAgVz9hBeESC8HJTaxW7ROJ1cc5b0PVuPcnmBSQqI7YjUf9P+B3k
+        Bzq26Ed/CkSXrI5+TOIJ9RV6jKgMtGg+3qkvYWMl1s0WfU6ouCXEToUFyxFvF9+ivhAG4RaQ5wHRj95n
+        poT6geMA23VwkYGPBV9E3J5qP9D2jVQkjpCX3WzCxsNqnOMPeetIPbVhUWHsMiXU0XQnwc0pbodx4YSL
+        JH6pB7DjIB9iw87I80GyeUlWRmxHov7jomdXew07KuFWW7z1jVdHPybxhIqPE2694RvHll+az7F5FOtm
+        i6wLNdPgOh0Tqc/HZDycgQGP5ydT/hUKPTQyqDVcST9cNpJ+VXH+wcWImI/zEG4FxbNHd0jkR//VVigy
+        xTRrUYlhpn33Hpmxr4HzFcKeT2ioJ+bjdhGhzNLm8zH5l0syP0qoip7i3fqSPAM9v8yRGRUKRW6w12Od
+        avBFQternwZVKHKTYVUr3P5I53XsN5O+ajy+SFZIoVBkF3rkehUaZULFb7JMMm+4KCuoUCiyw3Tbjv3R
+        aPQqTajAHGwdPl792oNCkRNMNm8sd4cDN3N9akIFjpB34BOWLSdkFRUKRe+AP8fUhTyDRG3GCBXgB3/x
+        y4RDKgu8MicKhaJnGGtcU5ffUj6Xh7siMQmRtnDgxt3tNdPfrtu3GgofUbWySeZcoVB0D2yG+OGy+Y7S
+        pdBaKBq+RqZFQojhXzUtwdgU9CzVAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnRefresh.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAHIAAAAfCAYAAAA7t5n5AAAABGdBTUEAALGPC/xhBQAABT1JREFUaEPt
+        mmtsVEUUx9dETTQm6gcUESm+QA3G+kBMjInEF4rRGuIDjB8MJGpADWo0NCYaxS+aUGJMpA9pSwsVCy20
+        UCJCaaXSitJiH+xu973dV7vbfb93u8dzxt6bu+0Y/aDeu3Ga/JKZOXPnNvc/58w5m9EBAJdwPn1VzfTw
+        W+udXUfuGG/0LdDvAsF/y/WGmvTdpmb7BmdXZ31w9HVfLrGQpxUxbyA2k73iQ99PO5YY6hK8xQXqsdhQ
+        m6ryn6vMFPKXztWtqDOc8pevNO8z8xYRaIfV1tYhfy65QKmd3DBnQsuWjzf4eQ8KtEe5qdlhyYRvLRKS
+        wukqc4uR94BAu6yxtfXnCjMXy0JW+vp28iYKtE9VYHAbE9KZjZZdq6/O8yYJtM9t4w1TlPzovgqcf483
+        QVA6HIqYX9BRncgzCkqHd7y91ToqOHlGQenwhK1tQEdFJs9YCjxqOwimdGjeeGNoDDqjlnnjf8U6Ryf9
+        msK1aZkbDLVJHc+gBi86j0J/wgNYCkECGUxOwkbXce5cCZ6QFY4OOBFz0K8gReN/h9FUAB6wtHBtcxlI
+        eOFe816uTQ00ISQJFsqnYbP7JNxi3A1lhjp4CYV1Z2PwvvdH7jPEn3nk/xFNCGnPRGCrp2fe+HPoXWEU
+        GEMH699v3gen4y5wocDnU1Pwgfd0kZBfBobAmgkzuz49DY+j0KfiE7DF3S3PwQwPhtDbpT69g+ZSG0sx
+        eMiyn7UxrYeOiIX9b/QOaQ3aPCPouRJxjB4fT/bL66mF6kKWm5qxngXmiTx7NJ+Bp+2HWHs45YdPJgdY
+        e6nxGziTcMtCPus4zAS6Tv/HGXePuZl59keTZ6AlbGBjdP5NoFgk9p2mPWxsh/8cfD39G2srhezBDbB9
+        9l0rcC5Fh0dsB1hfYrW1lY3fjqIrx9VAdSHpY6Rn8lwbQUK9MnEMVqI3xlDUhfpq2faq63tZSMy+wZeL
+        wxsYnhfNikk8bP2OiUftl3GdrqgNGoJjcsg+m/Sy85nakpB3mZrYBrpmdg2iLjgCX/h/lfu0KciTaU1p
+        TE1KwiPX2tuZV1rQk5S2Nba2otBKIrSGx8GTjcPn/l9kQadySbgPE5O9IT287TkFG5xd0B13wlL0WEqu
+        pNAtCfkUvi9byDPPVVKF3iu9i7y4KXRB7quNJs5IG55D9IHnjivPSDofI9hWesl6FEQppASFOjpLP50N
+        jQdQXFqfPHY52iijDeZTLMmiECo9JwlJ3j33XUooM6ZNRRuBZ1cDTQhJH5Q+7GvuE+zsow/9vOMIC4nK
+        rJWSi0pfH2svwY9IZQZPSBKgPjjKvJL6b3q62fnZF3fLcyiRoTFloqI8I3tR4J2BQbmuJI+mc/UmjByU
+        AD1pa5ef0wKaEJKgcoPqSMoCqY6kj7zJ9UPRnFXmFiYGhU5DOsjOQ0lI+rCUDFEIdGSi0B4xwY24KchG
+        AtDfttlNQNCz9EdnqDSmFJKy1v1hI3jxXVQa0Sai85yET87kijJXkbUK/hFwo7p04mJV6fOM/XCPDlPv
+        YzyjoHTY6ump0TWH9Bt5RkHpcDxmX6vDxOJycfWxdLnZuDuEyddl7M7OZ1M/b+dNEmifptCFTaQhE5Lu
+        fDxo+XaMN1GgXSocHd2FQuEiWUiC7kiK2wKlA9a7I1jfXi3pJwtJYPG76DHbwbO8BwXagcoNdza2WKld
+        kZAEXXilm3Vlhro4bxGBeqww7XHXBke2SOFUSVFHSSSfvvJo1Fqx2X2ykXbAMmN9gLe44N+DnIkuVr3r
+        7d1FWmQL+Ut4WgGA7ncn/qdK/i0lJQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnBackToLogin.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAHAAAAAfCAYAAAA/QknEAAAABGdBTUEAALGPC/xhBQAABUFJREFUaEPt
+        mmtsVEUUx9dETTQm6gcEEanRUBRf1QQ1oon4NqghMWrkkxE/EDEkitFQiR8UEzVqMWrSl31ApQh9UCgl
+        RQuttlJaSqEPd7f77Lbb3Xa3++i+n8dzBu717jIQMM3ubTIffumdc2Zmm/nfc+bM7mgAgIsvGb2pfHZo
+        y1u2ttZVY7XORdpSEOSG23Tl0YcMddYNtrZD1Z6RTc5EaAlPI+ICQyAVv2G7s+f75brKEG9yQe5ZpquI
+        lLgGimPp5LXZemU0hiKuotXGPUbeJIL8s9a8f9CVCC9SaiY/GGPewpVjNS7eQIF6KDLUjZtivhUZAlLa
+        fNRYr+cNEKiPFy1NJxLp1NWygMXO7p28jgL1UuI+vY0JaIvPFSzWliV5nQTq5e6xmhkqajQ/uc98xOsg
+        UD8H/MY3NHTO4zkF6udDR1eZhg6MPKdA/bxgaerV0CGR51yo4J4OT5p+4/rmk9fGD9E3JlxfrrhdVxHW
+        8By55MicBbY7ezJsJ0JT0B6wZtg+dvwJHQFbho1HrgQcibjhMVM915dL8i7gJ46/4PfAuNwu1FfDVDwI
+        3mQU7tBVyvbWOfMFQvPIlYBqIe8CPmLcA4FUHG7VnktHm+0d0OQ3MFHfmWxntlsQEnSNaS8MhKdh4+TR
+        jDn6w07ZphTw3rFaaMa5JtBG9vLZIUo78rgtU8dhEOejOSOpBEwnQlDhGWa+IP5PDxh2y33XmveDOeaT
+        22p5UfIuIGGN+eFl6wH2fNBvYguLFRY0+MaY7XlLI4tKeibfseB/qZReAE8yIu9HyoXtCdnhq5k+9gLg
+        Xg+NKOYvnhHmW4Xi0rg79VWs/ZKlGUwKgYSAV0CNZxS+numHpRiFfoy0e8ZqWPRQ1FFk7pjuhV+9WtZ3
+        OaZVWvgiQx1rf+s6BZXno4aQFharawgkY7BEWyb7aAxFGglK/lmcR0rTz+JLQmOlvkLAK+DtiXZWuFBl
+        dzLkkO2UGsnWFZzISJuU5r5x9bNnit5nLA2yT1pYimhlREmk0mn2gtAzvRhOTJvdQTv7/FesLXK/bAGf
+        NjcIAS8GpbE5jJYS1wB8josq2en5B/dpFkkrsLiR7LRwtJjrrM0witWgZCekhV2dtbcSD6Ig0VSSRSC1
+        f3QPsj1X8ivxYfQ/bDwX5cQGW5sQ8FL0hR0YDUF4HAsVyUZlOkUIFRnKvkQvRmonRuanWZWpcmEpqqRI
+        pfS8z6eHWu+o3Jf8r4+3ym0lpzD6tzm72TOl2eP4WULAS0B7IC/lGaJe+A73uWz7exg58XSSvtTNsCsX
+        lgoVKoroxbBgqqUCpkBxNKnCdiKdYukyhJyNzMBT5n3MR4XTUMQFk/EAaKOzsMn+hxBwPtmKVSqdDXm+
+        y6EEU/PP7jOwWFHkfIEpm44wyn4XgwR8Is8C3m/YNalZiBeWVmLUUbRKR4//Q4vfCMXnUyRBx4x6n44b
+        7dlQSqU9myplnj9XvGpt6dS8aTt8hOdUK7RvOfBM+Nn031z/5ULnR9pD6SsxSpXD+HcnRiXtlbz+Eru9
+        /7B9uXT2LNefSz6Y6izX1Hm1G3lOgfo5GrCu0+Dmfb24QrjwuEtf5Q2nEtexOzFfzpzcweskUC+Yyt+V
+        LzXR3Yo1pr2jvI4C9bF+/OCxdDp9lSwgQXcNxa/z6gfPnsPeZPRmSTdZQAKru6XPWRr7eAMF+YeODfZ4
+        YJlSswwBCbowSjfVCnSVQd4kgtxzn2GXvcIz/L6UNpVkNJT4k9EbD8+Z12+2d9SS8oX6ajdvcsH8Q8FD
+        F5a2OrpKSYN4OnkNTyMA0PwL/VsQ3a+7XbAAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
