--- a/gui/SerwisForm.resx
+++ b/gui/SerwisForm.resx
@@ -117,4 +117,209 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="wydaj.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAN8AAAAfCAYAAABnERiYAAAABGdBTUEAALGPC/xhBQAACB5JREFUeF7t
+        nHtsU1Ucx2uiJhoT9Q8EEQUfgAIqGPFFMBrf4gOjgmI0UTBqwAdiTCAmasRoNAIxRmE8B+P9HIOhPMaG
+        vJHXBqzb2m3t1r26rd3WbW3X9vj7HjmX28tpu46WVj1NPsk993fuub97zu93fr9z7nZNjDEp7oD3moym
+        wo9et+duGVKaWdereC5TKBTRucGc4R1RllU5wZ6bs7j51Pt1Xe19ZP4FzjvRFvRf9UXdvlk3mRe0yxpX
+        KBTdp595fuds59EZvlDgcqOvhRUKO53DR1pWWGSNKBSKnvNo+drjzq6OXnp/0w4sPtegwaVLnLILFQrF
+        hTO8LMtm9bkHhjkfUs37LStLZBcoFIrE8XTFhgNdoeClmvPNqNs7R1ZRoVAkntmNx6Zz57P7W/v3Lp4X
+        kFVSKBSJ5/bSJQ3YgDH90njiM1kFhUKRPDa1WMaZ8B5PJlQoFMnj09qCeSa8EJQJFQpF8niqYsNBE14C
+        yoTpCK1P2YPWVVJZT8l0nWY5rVapLB2JpG86PceF6PKyLQd/JSKVxUOi2kkWN5rnd5hkglQw3r6VHWiv
+        YW1BP2snjnXUs4nV28PqJNr5xto2s51tNvwVglSeLL5rOMxetGVLZdGIpG+qnkPGhepyqrORPWBdKZXF
+        Q6LaSSZp4XxwMlfAyyY7drHbShax/uYF7DVyRoe/jX1eu0erl4zId7GBUR7pqOuR8yn+W6SF81X6WtjU
+        mvzzzr9Es6ibnJJCNC/rnW9M5UZm9bkZrVl52eZrxZ/wsJOdDcxDkfPmkoXY0mWbW6y8/TKvi01x5Glt
+        /9x4nJXT9dXk4MXeJvZkxXpNBnZ7qsLqb2qxsOMUjUUZuuE6HE+w57LCTifXD0yrLdDqGfVa4SpmncEu
+        fu8imp0p9+f1hpZmso0tZazqbBsZTYXac4NI+g4tXcqySbe6rnY+gX1PUVVcAx6neriPADp8VX+Ay2Lp
+        /W71DmbxuVhToJPleey8rT891XQvD+/7V21btPrR9I+nL3HtaOtqfhxt/KAfsiVch2dHe+hnIde3E+05
+        U0nKnW84OQ9+iHgyeWvAx56r3MSP0XFwvvssK1iJtzksrYDsUHste4jk1509l0+DPrP+ID8eVraUR9LH
+        KtbxqIPBur74nzXBPZYsHm1FW+DL+v1spdvMj7F2gFHB+O+kdnBulvMo+63pJD8eSfrcVbaMH4+i+8O5
+        BpDzoyzTC05gjHz72h3ccVAH0XE9GfLC5lNcFk1fpOpwTOiI6+AEok0jME70wR1k1CjH0ntbawVvsy/d
+        dw85XRuNhTDwt6v/YBXkFDgG0fSPpy9xX+E0kcZP1MOEgEkW5a9pQkFf4FjIRTvRnjOVpNz5MJjeYEAq
+        A5jx3qzaxo/Roc9UbDxvlhMy/RrxbupsOK4weLCguYj96PyLR0vM3h9QmgvDEnI9j5Sv4UaC4zfo/rlk
+        iEuaT2tp8OGOWj7z6q8RQBcMsjg2rl2Nzgd9YNh9iudp5zApwUigfyR9+XUUySI9gx4YPaIEnkUmB0a9
+        X7HlaLJvyAnQB6IMBwuFQlznWPrH05e4L5wm2viJeuPs5yIvJuTGrg6tLNoRZT3650wl/4rIhxQTx+g0
+        pG9IrzD76+tB9jANsig/S9f4QwE+w+qZTbMs5BiYte5SVuP3sB+cR6QG3ECDea9lOVtOqeLHNbt5+oLZ
+        dgBFHRi9SKuQDu2nmf8gRTjMvphMxMAb9QJG50NkRxqnrwOCZNwiSsn0Fam38ToZiCzLXGfCzsWjN6JX
+        FvWDKMPR8IMTdkf/7vYl7gsdYo2fUT/YQwvZhSiLdnAc7TlTSVqs+ZC+YECM52VrPuTra9wl7KguDRMy
+        fYdiNsZg6GdOGTAOrGMwsxtl68jYoReizmCqB0NrpvUPIhlSItR5vjKbr8P06R5mYL0RGwca6w+98yEt
+        ggHqnwczP4zEqL9eXxgzIo7+OhnYgYRzwNDFuXj1juZ83dG/O30JxH1jjZ9Rv0jOF+s5U0laOB8GAAPx
+        nmMnz8UxMFjMI1WR7XZCjlcRc8+uE4TM2KEFNKhzGo9p73tgrGKdIcDgLqa1CaKJ/jz4sCaPp7h7PQ7t
+        HDYAcE5sWrxDax8zrT/FPT6pyedGKXSR6YUZf3rd3rBzmJGFDohqmGDwvkxfBxj1Rcr2E6VicIbehDEj
+        uIUyCmxYIF3Xn49X72jOh3Is/bvTl0B/32jjZ9QvkvPFes5UkhbOB/BqAQOI3Ti858OgTKreEVYHHSp2
+        O7EAr6UU7K2q3zWZsUOxW7aajAD1kKoi3cNaEYaI6IM0Brtm2KUTC3c9GGj89I6CdRd+WMegDEPD9dhx
+        Q1u/Np3gM7nQRaYXZmNEezgFohLODaGZGcaIyAAZNivEpko0fbGRsKW1nN8fu5LG3U4YdgetvfDsApyL
+        V+9YzhdNf9CdvgT6+0YaP2M9EMn5Yj1nKkkb51Mo/k/QZFRtUh9HUiguPi9UZuebxtu3bpMJFQpF8pha
+        k59hojx+okyoUCiSx/a2yjGm9qD/SvWZQIXi4nFrySJXR7DrCv4Nl28bDs2UVVIoFIlnmevMJPgddz58
+        T2KUddVpWUWFQpE4xto254VCoUs05wNWn3vgCPVf7QpF0hhtXV3kCnivFT6nOR+o9Xv6PlGx/rDsQoVC
+        0XPwasHhb+un97cw5wP4oCe+aNbfvMAja0ShUHSfYWVLHfObi6aIVFNPWEFPS8B79dbW8rGTHbsy4bWD
+        ShY3yhpXKBTnQNDCx5Gm1RbMhf/4Q4HLZP7FGDP9Dfu4QZ7q0IkxAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnRefresh.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAHIAAAAfCAYAAAA7t5n5AAAABGdBTUEAALGPC/xhBQAABT1JREFUaEPt
+        mmtsVEUUx9dETTQm6gcUESm+QA3G+kBMjInEF4rRGuIDjB8MJGpADWo0NCYaxS+aUGJMpA9pSwsVCy20
+        UCJCaaXSitJiH+xu973dV7vbfb93u8dzxt6bu+0Y/aDeu3Ga/JKZOXPnNvc/58w5m9EBAJdwPn1VzfTw
+        W+udXUfuGG/0LdDvAsF/y/WGmvTdpmb7BmdXZ31w9HVfLrGQpxUxbyA2k73iQ99PO5YY6hK8xQXqsdhQ
+        m6ryn6vMFPKXztWtqDOc8pevNO8z8xYRaIfV1tYhfy65QKmd3DBnQsuWjzf4eQ8KtEe5qdlhyYRvLRKS
+        wukqc4uR94BAu6yxtfXnCjMXy0JW+vp28iYKtE9VYHAbE9KZjZZdq6/O8yYJtM9t4w1TlPzovgqcf483
+        QVA6HIqYX9BRncgzCkqHd7y91ToqOHlGQenwhK1tQEdFJs9YCjxqOwimdGjeeGNoDDqjlnnjf8U6Ryf9
+        msK1aZkbDLVJHc+gBi86j0J/wgNYCkECGUxOwkbXce5cCZ6QFY4OOBFz0K8gReN/h9FUAB6wtHBtcxlI
+        eOFe816uTQ00ISQJFsqnYbP7JNxi3A1lhjp4CYV1Z2PwvvdH7jPEn3nk/xFNCGnPRGCrp2fe+HPoXWEU
+        GEMH699v3gen4y5wocDnU1Pwgfd0kZBfBobAmgkzuz49DY+j0KfiE7DF3S3PwQwPhtDbpT69g+ZSG0sx
+        eMiyn7UxrYeOiIX9b/QOaQ3aPCPouRJxjB4fT/bL66mF6kKWm5qxngXmiTx7NJ+Bp+2HWHs45YdPJgdY
+        e6nxGziTcMtCPus4zAS6Tv/HGXePuZl59keTZ6AlbGBjdP5NoFgk9p2mPWxsh/8cfD39G2srhezBDbB9
+        9l0rcC5Fh0dsB1hfYrW1lY3fjqIrx9VAdSHpY6Rn8lwbQUK9MnEMVqI3xlDUhfpq2faq63tZSMy+wZeL
+        wxsYnhfNikk8bP2OiUftl3GdrqgNGoJjcsg+m/Sy85nakpB3mZrYBrpmdg2iLjgCX/h/lfu0KciTaU1p
+        TE1KwiPX2tuZV1rQk5S2Nba2otBKIrSGx8GTjcPn/l9kQadySbgPE5O9IT287TkFG5xd0B13wlL0WEqu
+        pNAtCfkUvi9byDPPVVKF3iu9i7y4KXRB7quNJs5IG55D9IHnjivPSDofI9hWesl6FEQppASFOjpLP50N
+        jQdQXFqfPHY52iijDeZTLMmiECo9JwlJ3j33XUooM6ZNRRuBZ1cDTQhJH5Q+7GvuE+zsow/9vOMIC4nK
+        rJWSi0pfH2svwY9IZQZPSBKgPjjKvJL6b3q62fnZF3fLcyiRoTFloqI8I3tR4J2BQbmuJI+mc/UmjByU
+        AD1pa5ef0wKaEJKgcoPqSMoCqY6kj7zJ9UPRnFXmFiYGhU5DOsjOQ0lI+rCUDFEIdGSi0B4xwY24KchG
+        AtDfttlNQNCz9EdnqDSmFJKy1v1hI3jxXVQa0Sai85yET87kijJXkbUK/hFwo7p04mJV6fOM/XCPDlPv
+        YzyjoHTY6ump0TWH9Bt5RkHpcDxmX6vDxOJycfWxdLnZuDuEyddl7M7OZ1M/b+dNEmifptCFTaQhE5Lu
+        fDxo+XaMN1GgXSocHd2FQuEiWUiC7kiK2wKlA9a7I1jfXi3pJwtJYPG76DHbwbO8BwXagcoNdza2WKld
+        kZAEXXilm3Vlhro4bxGBeqww7XHXBke2SOFUSVFHSSSfvvJo1Fqx2X2ykXbAMmN9gLe44N+DnIkuVr3r
+        7d1FWmQL+Ut4WgGA7ncn/qdK/i0lJQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnBackToLogin.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAHAAAAAfCAYAAAA/QknEAAAABGdBTUEAALGPC/xhBQAABUFJREFUaEPt
+        mmtsVEUUx9dETTQm6gcEEanRUBRf1QQ1oon4NqghMWrkkxE/EDEkitFQiR8UEzVqMWrSl31ApQh9UCgl
+        RQuttlJaSqEPd7f77Lbb3Xa3++i+n8dzBu717jIQMM3ubTIffumdc2Zmm/nfc+bM7mgAgIsvGb2pfHZo
+        y1u2ttZVY7XORdpSEOSG23Tl0YcMddYNtrZD1Z6RTc5EaAlPI+ICQyAVv2G7s+f75brKEG9yQe5ZpquI
+        lLgGimPp5LXZemU0hiKuotXGPUbeJIL8s9a8f9CVCC9SaiY/GGPewpVjNS7eQIF6KDLUjZtivhUZAlLa
+        fNRYr+cNEKiPFy1NJxLp1NWygMXO7p28jgL1UuI+vY0JaIvPFSzWliV5nQTq5e6xmhkqajQ/uc98xOsg
+        UD8H/MY3NHTO4zkF6udDR1eZhg6MPKdA/bxgaerV0CGR51yo4J4OT5p+4/rmk9fGD9E3JlxfrrhdVxHW
+        8By55MicBbY7ezJsJ0JT0B6wZtg+dvwJHQFbho1HrgQcibjhMVM915dL8i7gJ46/4PfAuNwu1FfDVDwI
+        3mQU7tBVyvbWOfMFQvPIlYBqIe8CPmLcA4FUHG7VnktHm+0d0OQ3MFHfmWxntlsQEnSNaS8MhKdh4+TR
+        jDn6w07ZphTw3rFaaMa5JtBG9vLZIUo78rgtU8dhEOejOSOpBEwnQlDhGWa+IP5PDxh2y33XmveDOeaT
+        22p5UfIuIGGN+eFl6wH2fNBvYguLFRY0+MaY7XlLI4tKeibfseB/qZReAE8yIu9HyoXtCdnhq5k+9gLg
+        Xg+NKOYvnhHmW4Xi0rg79VWs/ZKlGUwKgYSAV0CNZxS+numHpRiFfoy0e8ZqWPRQ1FFk7pjuhV+9WtZ3
+        OaZVWvgiQx1rf+s6BZXno4aQFharawgkY7BEWyb7aAxFGglK/lmcR0rTz+JLQmOlvkLAK+DtiXZWuFBl
+        dzLkkO2UGsnWFZzISJuU5r5x9bNnit5nLA2yT1pYimhlREmk0mn2gtAzvRhOTJvdQTv7/FesLXK/bAGf
+        NjcIAS8GpbE5jJYS1wB8josq2en5B/dpFkkrsLiR7LRwtJjrrM0witWgZCekhV2dtbcSD6Ig0VSSRSC1
+        f3QPsj1X8ivxYfQ/bDwX5cQGW5sQ8FL0hR0YDUF4HAsVyUZlOkUIFRnKvkQvRmonRuanWZWpcmEpqqRI
+        pfS8z6eHWu+o3Jf8r4+3ym0lpzD6tzm72TOl2eP4WULAS0B7IC/lGaJe+A73uWz7exg58XSSvtTNsCsX
+        lgoVKoroxbBgqqUCpkBxNKnCdiKdYukyhJyNzMBT5n3MR4XTUMQFk/EAaKOzsMn+hxBwPtmKVSqdDXm+
+        y6EEU/PP7jOwWFHkfIEpm44wyn4XgwR8Is8C3m/YNalZiBeWVmLUUbRKR4//Q4vfCMXnUyRBx4x6n44b
+        7dlQSqU9myplnj9XvGpt6dS8aTt8hOdUK7RvOfBM+Nn031z/5ULnR9pD6SsxSpXD+HcnRiXtlbz+Eru9
+        /7B9uXT2LNefSz6Y6izX1Hm1G3lOgfo5GrCu0+Dmfb24QrjwuEtf5Q2nEtexOzFfzpzcweskUC+Yyt+V
+        LzXR3Yo1pr2jvI4C9bF+/OCxdDp9lSwgQXcNxa/z6gfPnsPeZPRmSTdZQAKru6XPWRr7eAMF+YeODfZ4
+        YJlSswwBCbowSjfVCnSVQd4kgtxzn2GXvcIz/L6UNpVkNJT4k9EbD8+Z12+2d9SS8oX6ajdvcsH8Q8FD
+        F5a2OrpKSYN4OnkNTyMA0PwL/VsQ3a+7XbAAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="endserv.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAANUAAAAfCAYAAABwM4hRAAAABGdBTUEAALGPC/xhBQAACFVJREFUeF7t
+        nHls1EUUx9dETTQm6h8IIgIegIIHGPEIwYgXKh4YIyhG/xASURBFjAloPCImxgOIopa73HehUIoglFY5
+        KjcU6Lbd7fbadntuj+12u7vdcb5D3y+zvw67bandFabJJ/nN/WZ+7715M7tdC2NMSW3Qd8PC6tPT3ihK
+        TRmcu9zVIzuBaTSXK7dYF/qG5a0qmFCUun1ZzZnJrkBjL5XdgDYZDS3+6z53HZjT17q4UdW5RqNJYH2s
+        i5rmVh6b1RwKXm22obDE6abKocNta2yqTjQaTVtG5W88URnw9pDtyHiwNbsHDspNrFQ11Gg0F2Zo3qpC
+        e3PtgDCjQsj3sG1tjqqBRqOJzrOOpEOBUMuVhlHNcu2fp6qo0Wjaz9yq4zOFURX56/v1zF4QVFXSaDTt
+        567cxApcXFjmV538RFVBo9F0nK11tnEWfA6lKtRoNB3n47KMBRZ8oKUq1Gg0HWe0IynTgg+xVIWa7oGf
+        admj9nXKsljyauF2fItAWdbVYA1G2tcryzpCd8p8IW61LvJaVAWxYHzRDnaosZQ1tPhZI+e4t5xNLNmt
+        rHspEa9Gdaapij1iX6ss62q6yqi6U+ZIxIVRwXjcQR+b4tzL7sxZyvpZF7PXuZE5/Q3s07K/lG0uFeLV
+        qLqTrjKqeCEujKqguY5NL01vk/9K4TZWy42Nb6nsKcdmlsU9EeHhu9lX5YdEvcLmerHTZfuqmSvQyE7w
+        XW5U/kajnwlFqex0U6V4eWBGWYZRNiR3BUuus4l2MOzvKg5HHIvY5ylmU51pRnor7wPjUhqyQ55jih33
+        iNdl5MlGNaZgC7M31zJ+zhXpIbnL2Za6PFbcKvfC6tNiLaifi5l3tLaoT4p+V24i21ZnF+8pz+cOm7cM
+        1um+vJVGGv3l8/lQ+ueqEyJdwp0lxn2GrzPy5bGi9TGtdJ+QFeva1BJg5Vz2RTVZokzuJ5bE3KiGcgXC
+        H3YoVXl9sJm9ULA1LA8LjV3sbv6ykcZipnmK2G05S0T6a24ACCWp/nDbGuNFjeAKjJfRv7Uu6uFlIxbn
+        50uhyNQOmMciviw/yNbWWsUz2kLx8fLvzVsh8uZUHmO/V58SSgDZqN1DXJaaYJMR+0N2GBXyc3w1YeHL
+        gUanMPKb+DNk28wNbEnNGaP8YuYdra2soOncgcwuzxTP9/D5YT2edGwy6hKRDOLlwmRhDDdnn5/3A7ZV
+        IiLBM8ba01AojDxSH4P5u8Ha3d6qK885zjshqivLHEtiblRYNF9LUFkG4BnfKt5ppKGM8HJvSnlYzHFF
+        KUYaCloV8BppM6gPJcOOgDNc79YXbUY1FvF4/gZhSHhGeWq9gyXWnDXC1cPeMqEkfbniQBHgPJD/Y+VR
+        trjVswLIAuUw7xRCNu5QemUvMPLQBwwDRkZtOzNveo7UFuVQ0Pu5gsOx0ZgA8v/A50FpIpJBYD6ugIe9
+        x0N8eb1RB/OcX3WS9eRzjdZHNV/L/q3GiIgCclJdkpnSseJ/sVMhLKI0vP9K97mwOljMx7iSUxpesI6H
+        cpRGuHKQe/3MxjLhjWHEWHwKt6ieGdVYMhVcCR+0rWar3dnsQ74jIdyC98dLh7FSqIbw5PvKI+IZIZTs
+        5SH7qaYKEXpCbsrH7qySrSUUCtuhOzPv9rQlBX2er5E/FBSKLTOX78RUlzAbxBP5mwyDAOhvY20uK/V7
+        xHrAuHY1FIh3THJF6wM7JsLV/R6nmNOLBclGGclM6VgRF2cqB1c0KKU5Xz5TIT2Wp6Fo5KkI82LKCoJF
+        Rwwvh3XwyKgPg4CXpJBE5kJjyWziCgK54YEHcUVHiIZdCeclhExUD2NBMWDEZ/kZTe4DsuOss6E2R5wT
+        SBaEbjBMWTbsGjAMeafqzLzxHKmtXI7dAfnyTnUh8K7QD6XhZGSDIOAU/vaUsG9aQ0pZlmh9/MJDdVxo
+        UVrGPKdYERdGBSWEMr7r3CNifijna4UpIryicApxNLw8QiVz+0gK8k7JLmblZxU6w3xUmi52RqqPMO0n
+        HsogzEL4gbaRxpL5oDRNhG3wmpSHAz3yzBcb2C1gaJ+5DoTlQ3acqTBnfIyQwHdHKoMnph0OXh2Gt9x9
+        NqxtZ+cdqa25PIPLPa/quNEXnBGdHWWOel1spmu/eIYzwmWOyqhgoMv42ZDmJo8VrQ+sCXSD0jLmOcWK
+        uDAqgCt0LBi2f3xOBcWcVPKnUQ4l9fLzhHwrR4obSUGgjLhBQ8iAG6/fqk8K5ab6CDVS6vNFOeJ1XAxE
+        GksGioU/UgKAMwP+cOaS677P8xFG4SZNzofsdPuHS4AyHhq9XfyHSONgDiPFTojdHJcUdLintp2dd6S2
+        5nLIvJ4bNGRDmIr1kM9/BG7zcNtIt3uTuZMkg4CDQhnSkAey0SWJPFakPsBSvgaBUIuhJwidaa3Nc4oV
+        cWNUlzoI8WC8qjJN+5jLd8tfWy80KA8hZBI3ULleLOGOtsTCvaH+UZf/GJy3cD4zfzSg6Rj4PHGWFBUg
+        ZMbHGgjf5Xqx5KWC5HTL+KIdO1WFmq4BIS3Cpi/KDyrLNe0H1/4IYfF1JISICENx1pOv6GPN9NL0hZZV
+        7uyJqkKNRtNxdjcUjLHww961+ufINJqL546cpW5vS+Aa8RsV31b8M1tVSaPRtJ+V7nOTYE/CqPB/9SPs
+        686qKmo0muiMLdyWFgqFrjCMCtibawcM0/8FrNF0mJH29VnuoO9GsiXDqECZ39P7acfmw6qGGo2mLbhC
+        d/ob+sh2FGZUAD8IiF9Y6mdd7FF1otFoxLdfnItqsqZSyCcTlpCpC/qu31GfP3aKc+9yWOPAnGVVqs41
+        mssBbDKjHUmZM8oyEmAX/lDwKpXdMMYs/wIfexRSWyxR1QAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="deny.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAJUAAAAfCAYAAADuiY/xAAAABGdBTUEAALGPC/xhBQAABjRJREFUeF7t
+        m2tsk1UYx2uiJhoT9QOCgAxvqICKRiTRYLyDojg/KILxg4FEDASDGg3ED0YxMRodUYywzcFgAhMYjGtA
+        LkOmDOQy2GDd2q7ttq7d2q3t2q7X9fH8T/q+edsdWmiAdnKW/JL33J6+7zn/93mec9bqiEiIJxa6rbjn
+        7KLZbbt3jm8pdwxrWkmSa5dR+uLQY4YKy5y23TtW9zbOd0QDI0S6AYMqfAORW75w/P3jGH1pQGRcIgGj
+        9SXBIufJpeF47MZUDSUVzgadkyYb1xtFRiQSEc+1bjrtjPYP0+pIvTCG3eMeaFnjFA2USNIxyVBhNYU9
+        9yeJCiFvinFDs2iARHIxTDdXHY3GB65XRbXUUbtc1FEiuRSKXKeWcFG1RfoKhjetiok6SSSXwoMta7qR
+        uOtWuOo/FXWQSLJhm9f4tg7nUKJGiSQbPrYfXqXDgZaoUSLJhmnmqjodDrFEjUOBF81byBByC9suF+Xu
+        c7SjzyRsyxaWx9JUU6Wwbahzl76kXydqyAWz2nbR0UAn+QYiFGCc6u+iuR37hH0VrrSoCq3bab/PitNj
+        YXu2/J9FBfJCVBCPOxaiBbYDdF9zGRXoS+kdJjJbxEef2f8SjgFXw1NdCaSorgKWsJcWd9YMqn+TeQoP
+        Extzqbz8pHE9HfF3UAcTW32wmz63H0kSlTXch38b0BnW5mfebqZlGzUEXSqo+7LrKO+L60cM69SxGNca
+        9qjlCS1rqdprJEc0wAX/bfdxtU0hk42fXKd5GffbFOqhl9lLgHqtqDLZWNR5iE4zr32SERyIUhe7n5Le
+        Bt7GtvC03Wvi84d5WGg7qI7LJTkX1SRDBeEPHkrU3hcL02tMHLg+G3TSV111/Hps82/0T8CWJCos1rGA
+        nZ4ybaQ7EnUKWCx4vofYQqCcaTERiiGKUfpiHv4mtJSrbQrpbLxhreZiuLOpmJcfN1ZwD4xr3CfCKkJ+
+        Ohvj2Wf2xoJ0T2JuXjFvJZPmHmv87bQsMR8TDWv5871g3qy254qciwqTGBqICdsARPNe+x6azLyUjwls
+        RNMqte39jr2DRCXKwyAMeIp3mR2lLt1ish0xz+1GJgRxITLZcET99CEL6Vo76IPnWOGqp+HsWTLZ6GGi
+        GpsQI8I9nhHXj7IxeOG0L08p82DfO0+o5VwxJDzVDMtW7q20bymYbq4aJKpnWv9I6gN+7TlD69znk+pS
+        F/P51s3qYuLzUj9LRDobACFuk6eFOiN++s75LxfXXp+FP9OFwl+qDXgihOBav417z9ct1bz+VXaPkXiM
+        99VS5Dypjs0VeZFTmVlO8BHLHVLrtTkV8ikvu9a+mbPbdg8SVWoCjB0cBKK87Qqwi5CklOcwW8piPmH8
+        nXsTJXRdiHQ2tCDkIhf8OhGqtPeZycbPLARjA6OUFeDFUucjX8gLUSFkIXf4wLaf50rIYd6y7qR2Nvna
+        3R+S7aWOWn49hokEeUk6USEXQRKLXESpUzjR76AlCVsQ3CGWn2gX83i/nX5goQThFmFKu/AKmWwoYOFX
+        9zZyb4Wy9j4z2YB3wlwoZS2HWd/lrlM8vKOMl+Fhllul9rva5IWoAI4QMIEIBzinQpI7r+PPpD5TjBt4
+        GEA40Yd6eb6STlTY6fWzHZN2B6js/rATQ+Kv7MzmM0FrFxMhaWdfKw89yGtEu790NiBktKGMXelWr4Hu
+        Zi8M2rT3mek+ypgYo/EBdV6ws302EeKx+6v0NJOdzQd2qHg+5GTK2FyRN6KSDKaIeaFfEgm9UocQWsUE
+        qu2XTzBP2aGTP2rIX3BOpoR7gLRgg0fPw7K2Xz4x01Jdo5vVtmuPqFGSe7A5wVlUIwtrCJEIb8ihMh11
+        5JLFnTXFugp301xRo0SSDft8lhk6lvzdLH+OJbkc3Ntc5mYbo5v4d9S/6T62TNRJIrkU1rnPz4OeuKjw
+        veKnTRvPiTpKJBdDoXX7wXg8fp0qKoDfbclvgUqyYaqpssEdC92uaEkVFbBH/CNfMm85LhookYjAEYIt
+        4hut1VGSqAB+EIhf2BToS/0iIxIJmGhYayvpbViohDwtSQUt3ljo1l19rYULbAfKocZxzatdIuOSawM4
+        mWnmqrpP7IdXQheReOwGkW6ISPcf/4K/NOu6kA4AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="editserv.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAALcAAAAfCAYAAAClIVwcAAAABGdBTUEAALGPC/xhBQAABvZJREFUeF7t
+        nHlsVEUcx9dETTQm6h8oIgJKBFRUMCJGgtF4oShiTCDgX4p/eCAeGA1oPDEmaoAYo0ArtFAoyFmOEonU
+        lvuQs5Tddne726Xb3Xbb3W73Psf5jp2X6WO6XQiyu2U2+STvzW/mN/Nmvu83v/eaVwMhREpnMnrTso7T
+        c2Y4Krff21DqHmBcQhSKXHO7aVl0rLnMPtNRuW2F98xb7kRooEy/4LyCQCp+w+fu/QuHmIpDMucKRT4x
+        2FQUWeQ5Nj+WTl6r13KPk9MRz5hxljUWmROFIp95snH9CU8iPEDUs3ZgiflGjGwo8cgaKhSFwBhzWZM1
+        1nl3D3EjFRlvKa+XNVAoColJtk0HE+nU1Zq457v3LZZVVCgKkUXtx+cxcTviXUNvNS5NyiopFIXIqIaS
+        NjxgGn5pP/mxrIJCUchs8VumGfAeW2ZUKAqZj1w1Sw14IS4zKhSFzHO2TYcMeAkuM/Z3nrZtJOaoT2oT
+        ebVpG/4qJrWJ0GcXMtG6Tmq7nGQ73v7OHaaisEFmuJzsDjhIKBUnXckYcSeCpMJvIQ9bVkvrXkqyFfeZ
+        SDt51FoutYnki7izHe/F8n3bEfJyU4XUlm/khbjfdu5mx3fVLydF3lq2QPp6l5psxZ0t+SLu/xO6y5Oj
+        YbcSd7aI4gZ0OyGpdJrc01DCzptiXfjTKjkVaSNBGuGn2LeQWip+Dsq+aj1IjoVbyazmXZofgIXgZY9Y
+        1pC9wWbSHA+Qk9TXp669mrghdJlP2ETRjqJj2uq3EnvMz9rOdlaxcn09kZ/bT5DGWCfr1xjtIM/SvlCe
+        yZf+mvfQcYv2LXR3O0Gvl5+/0rSV+caxOI7e+p7pqCSnIx5WF8x11Wi+0Pd0xw5W350IsX4wFthKfXUk
+        kkown5gnmtf26S+X5J24h9PoDXEPNRWzc0zW4ZCLPGZdS27prsPBpDvpwuFGmNPyN6kKOjQbxOxNRrT8
+        E5P/Teshdjys/ndyIOSURm7RJ87RPxdLdfAcWdDtY7R5Jav3lG3DefU4iHAQx23G/8bwkKVMu66+fInX
+        /GXrAVLeaWI2XM85aofA7qftULbQc4z81nFKa4txZOp7HJ2bB8yr2PEE2gcEiznh7TGPd3aff01v8oOh
+        FnYMIGp95M7kL5fkjbixCOMt5Szn3tDZoNkx2fqIDLDIiC6vndvJzofQhYOYx5jL2PlPnn9IMU1xcIzJ
+        D9CcfqBxqdb+9eY/zxO33ifgYnmQLh6eC8QbDP5/pP2I9bgNjKVjwXMErm9Qt8hANr7Ea36i8Q8maBxj
+        bJVdNlLirSOfuPawsiNhF4u2vC3G0VvfMtAGouTH0xzbNRuCRHsirJ3LxK1H9JdL8kLcAbr1Ygs8TiPN
+        grbDLDXhdkzU43RxxTYAkWqV72yPMuTrP3iOsmNs9zwSvkhTGSuNdGLdSXRL1Ytb5pOL5QX7ZhJPJ1nE
+        FFlEo6ZYT2wLULae3qwt8SAbG4SWjS/9NbdRgeFBe7XPSN6nuxRSAUTYYfSmxvzxORPHIesb5UhxsHMd
+        orsDonI0ldTa6PtGxPcno9q5TNyZ/OWSvEtL9MhEM5XmmBArFlYsRz2IZDIVTx1dBF6O6IMFEiPlDCoO
+        Udy9+eT9IxLqfcjqyWwAaQ5y/m9pKnIxvrCbQdSIxiOpLzzcYadChEeKk6mt2PdL9gqWg9/XUKrZEZl5
+        G317vbiR3oni7stfLik4ceONCqLy87bNPepxED2w2J+59/coR8SZ797HjpHC/BVo0sSdyafYfw31u7j9
+        uJbHI5LyvFcmKhEIeYX3jLazXKiv91qqWA69L+jUyvBAijL+8AtkbcW+36DpmCnq1fr9oKWa4Mfb6Nvr
+        xY3dYl73PIK+/OWSghM3FjJMH1ggVo64uO9QX9jy8TaClwHk8xAGtmgsBvrk4s7kU+wfPtd11hMX9eGj
+        C456/E2CTFS4WRDpsJvgLcRmv1l7ULtQXxA+fqKwcA34ISfnZbxtb30jNcEx0kCU/9pxkgUD3p++b724
+        EaltNBAgGGC368tfLsm5uC81eA21vatRalNcOdBg0GzoTx//IhdF3owHSJldceUwxV5RbZju2LFTZiw0
+        8JSOLf6L1gNSu+LK4sOW6mWGMp9xlsyoUBQyuwL2yYZQKn69+jcOiv7E8PrlvnAqcR37hvK7tsMLZJUU
+        ikJkle/sm9A1Eze+N5tgXVsnq6hQFBJTm7ZWpdPpqzRxA/y/B/VVjqKQmWhdV+tLRm/mmtbEDVzx4KBn
+        bBuPyBoqFPkMXv0544HBop57iBvgH5rgi/ihpuKgzIlCkU+MNq90FnlrZ/NURKTHiYg/Gb1xR1fj1Hed
+        u0txV4yoX9Euc65QXE4QdPHx71xXzRLoM55OXiPTLyHE8C8EE5PWrOZB/QAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
